added per-core tuning tab -- it's not working yet, still waiting on updated register addresses
